Align illustration backgrounds vertically to prevent jump during swipe

--- a/style.css
+++ b/style.css
@@ -194,14 +194,14 @@ body {
 
 .illustration-bg-page1 {
     position: absolute;
-    top: 50px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
     background-image: url('bg2.png');
     background-size: 165% auto;
-    background-position: center top;
+    background-position: center 20%;
     background-repeat: no-repeat;
 }
 
